--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "homepage": "https://github.com/kekland/five-stars-server-js#readme",
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "typescript": "^3.5.1"
+  },
+  "dependencies": {
+    "class-validator": "^0.9.1",
+    "express": "^4.17.1",
+    "lapisdb": "^0.1.6"
   }
 }
