--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp",
+    "build": "gulp build",
     "start:prebuilt": "node build/main.js",
-    "start": "gulp && node build/main.js"
+    "start": "gulp build && node build/main.js",
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
