--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp build",
-    "start:prebuilt": "node build/main.js",
-    "start": "gulp build && node build/main.js",
+    "start:build": "gulp build && node build/main.js",
+    "start": "node build/main.js",
     "watch": "gulp watch"
   },
   "repository": {
