--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "homepage": "https://github.com/kekland/five-stars-server-js#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.1",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "express": "^4.17.1",
