--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "typescript": "^3.5.1"
@@ -32,6 +33,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lapisdb": "^0.1.6",
     "reflect-metadata": "^0.1.13"
   }
