--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
