--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "lapisdb": "^0.2.3",
+    "lapisdb": "^0.4.2",
+    "lapisdb-level-adapter": "^0.1.0",
+    "moment": "^2.24.0",
     "reflect-metadata": "^0.1.13"
   }
 }
