--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/kekland/five-stars-server-js#readme",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/connect-history-api-fallback": "^1.3.2",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "@types/jsonwebtoken": "^8.3.2",
@@ -34,8 +35,10 @@
     "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lapisdb": "^0.4.3",
     "lapisdb-level-adapter": "^0.1.0",
